# weekend-ray-tracer

./: .gitignore  Aabb.h  Box.h  Bvh.h  CMakeLists.txt  Camera.h  ConstantMedium.h  Dielectric.h  DiffuseLight.h  Dockerfile  FlipNormals.h  HitRecord.h  Hitable.h  HitableList.h  ImageTexture.cpp  ImageTexture.h  Lambertian.h  Makefile  Material.h  Metal.h  MovingSphere.h  NoiseTexture.h  README.md  Ray.h  Rect.h  Scene.pb.cpp  Scene.pb.h  Scene.proto  Sphere.h  Transform.h  Vec3.cpp  Vec3.h  XyRect.h  animation.cpp  animation.h  main.cpp  perlin.h
minifb/: Makefile
sim/: Makefile  Scene.pb.cpp  main.cpp
src/: Box.h  NoiseTexture.h  Ray.h  Texture.h  Transform.h  perlin.h
src/ray/: CMakeLists.txt  CheckerTexture.h  ConstantTexture.h  Dielectric.h  Isotropic.h  Lambertian.h  Material.h  Sphere.h  Timer.h  World.h  main.cpp
src/scene/: CMakeLists.txt  Scene.proto
src/sim/: CMakeLists.txt  main.cpp
